themes/firekylin/res/css/main.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --shadow: 0 0px 0px 0 rgb(0 0 0 / 6%), 0 0px 1px 0px rgb(0 0 0 / 10%), 0 0px 5px 0 rgb(91 91 94 / 10%);
    --content-width: 900px;
    --content-max-width: 95%;
    --background-color: #000;
    --header-background-color: #00000099;
    --text-color: #333;
    --border-color: #333;
    --article-gap: 30px;
    --article-radius: 6px;
    --toc-bg: #ffffffed;
    --toc-after-bg: #ffffffed;
    --code-bg: #f2f2f2;
    --code-color: chocolate;
    --header-height: 65px;
}

@font-face {
    font-family: "logo";
    src: url("logo.ttf") format("truetype");
}

body {
    color: var(--text-color);
    font-family: monospace;
    font-weight: 300;
    background-color: var(--background-color);
}

body, html {
    width: 100%;
    min-height: 100%;
    background-color: var(--background-color)
}

a,a:hover {
    color: #2479CC;
    text-decoration: none;
}

img {
    max-width: 30vw;
    max-height: 50vh;
    border: 1px solid var(--border-color);
}

#main {
    width: var(--content-width);
    max-width: var(--content-max-width);
    margin: auto;

    padding-bottom: 20px;
}

h1 {
    font-size: 32px;
}

h2 {
    font-size: 26px;
}

h3 {
    font-size: 20px;
}

h1,h2,h3 {
    font-weight: 300;
}

article {
    position: relative;
    word-wrap: break-word;
}

article h1.title {
    color: var(--text-color);
    margin-bottom: 15px;
    margin-top: 10px;
    font-size: 40px;
}

.index-post-time {
    color: #CCC;
    margin-bottom: 10px;
    display: block;
    margin-top: -10px;
}

article h1.title a {
    color: var(--text-color);
}

article h1.title a:hover {
    color: #2479CC;
    transition: color .3s;
}

article .entry-content {
    font-size: 16px;
    line-height: 1.6;
    word-wrap: break-word;
}

article .entry-content .date {
    color: #999;
    font-size: 14px;
    font-style: italic;
}

article .entry-content :where(p, blockquote, dl, table, iframe, h1, h2, h3, h4, h5, h6, p, pre, hr) {
    margin-top: 15px;
}

article .entry-content :where(ul, ol, dl) {
    margin-left: 35px;
    list-style: nu;
}

article .entry-content p code {
    display: inline;
    padding: 2px 6px;
    background-color: var(--code-bg);
    border-radius: var(--article-radius);
    color: var(--code-color);
}

article pre code {
    display: block;
    padding: 4px 10px;
    background-color: var(--code-bg);
    border-radius: var(--article-radius);
    width: 100%;
    overflow: auto;
}

article .hljs .name {
    display: none;
}

article code ul {
    list-style: nu;
    width: calc(100% - 35px);
    min-width: fit-content;
}

article .post-info {
    font-size: 14px;
    margin-bottom: 15px;
}

article p {
    margin-top: 15px;
}

.toc {
    padding: 20px 6px;
    background-color: var(--toc-bg);
    position: fixed;
    top: 0;
    height: 100vh;
    margin: 0;
    border: none;
    width: 260px;
    box-shadow: var(--shadow);
    transition: all .3s;
    left: -260px;
    backdrop-filter: blur(2px);
    -webkit-backdrop-filter: blur(2px);
}

.toc:hover {
    left: 0;
}

.toc:after {
    content: 'Outline';
    position: absolute;
    right: -1.5em;
    writing-mode: vertical-lr;
    background: var(--toc-after-bg);
    border-radius: var(--article-radius);
    box-shadow: var(--shadow);
    display: block;
    padding: 15px 0px;
    top: 50%;
    transform: translateY(-50%);
}

.toc:empty {
    display: none;
}

.toc a {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: inherit;
}

#page-index .post {
    box-shadow: var(--shadow);
    padding: 10px 20px;
    border: 0;
    overflow: hidden;
    margin-bottom: var(--article-gap);
    border-radius: var(--article-radius);
}

.post-url, .more {
    display: none;
}

.pagination {
    text-align: right;
}

.featured-image {
    margin-bottom: 15px;
}

.featured-image img {
    width: 100%;
    max-width: 100%;
    height: 300px;
    border-radius: var(--article-radius);
    border: none;
    object-fit: cover;
}

.featured-image-thump img {
    object-fit: cover;
    width: 100%;
    max-width: 100%;
    height: 200px;
    display: block;
    border: none;
    border-radius: var(--article-radius);
    margin-bottom: 10px;
    position: relative;
}

.header {
    box-shadow: var(--shadow);
    padding: 10px 0;
    margin-bottom: var(--article-gap);
    position: sticky;
    top: 0;
    background-color: var(--header-background-color);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    z-index: 2;
    height: var(--header-height);
}

.header-content {
    width: var(--content-width);
    max-width: var(--content-max-width);
    margin: auto;
    display: flex;
    align-items: baseline;
    justify-content: space-between;
}

.header-content nav {
    display: flex;
    gap: 12px;
}

.header-content .title {
    color: var(--text-color);
    font-family: logo;
    line-height: 1;
    font-size: 40px;
    margin-top: 5px;
}

@media screen and (max-width: 769px) {
    img {
        max-width: 100%;
    }

    .toc {
        max-width: 100%;
        position: static;
        height: auto;
    }
    .toc::after {
        content: '';
    }

    #main {
        width: 100%;
        max-width: 100%;
        min-height: 100%;
        padding: 20px 10px;
        padding-top: 0;
    }

    article {
        background-color: var(--background-color);
    }

    article h1 {
        font-size: 22px;
        padding: 5px 0 10px;
        margin: 0;
    }

    :root {
        --article-gap: 20px;
    }
}

@media screen and (max-width: 568px) {
    .toc {
        width: auto;
    }
    .comment form {
        width: 80%;
    }
}

@media (prefers-color-scheme: dark) {
    :root {
        --shadow: 0 0px 0px 0 rgb(255 255 255 / 10%), 0 0px 1px 0px rgb(255 255 255 / 30%), 0 0px 5px 0 rgb(120 105 105 / 40%);
        --content-width: 900px;
        --content-max-width: 95%;
        --text-color: #ccc;
        --border-color: #ccc;
        --toc-bg: #111;
        --toc-after-bg: #222;
        --code-bg: #333;
    }

    .header {
        box-shadow: none;
    }
}


#external-comment {
    margin-top: 20px;
}

table {
    width: 100%;
}

table, th, td {
    border: 1px solid black;
    border-collapse: collapse;
}

th {
    background: #cccccc7a;
}

th, td {
    padding: 4px 6px;
    max-width: 300px;
}

